feat: add endpoint for upload and watch multimedia
