# config/docs/openapi-spec.yaml
@@ -49,6 +49,89 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/UnexpectedError"
+  "/media/upload":
+    post:
+      operationId: uploadMedia
+      tags:
+        - Multimedia
+      summary: upload multimedia
+      description: Esta operacion permite subir un archivo multimedia.
+      requestBody:
+        description: Cuerpo del mensaje para crear el usuario.
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                fileUpload:
+                  type: string
+                  format: binary
+      responses:
+        '201':
+          description: OK
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/IdOutput"
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/BadRequest"
+        '422':
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/UnprocessableEntity"
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/UnexpectedError"
+  "/media/files/{filename}":
+    get:
+      operationId: seeFiles
+      tags:
+        - Multimedia
+      summary: see multimedia
+      description: Esta operacion permite ver un archivo multimedia.
+      parameters:
+        - name: filename
+          in: path
+          description: nombre del archivo multimedia
+          required: true
+          schema:
+            type: string
+      responses:
+        '201':
+          description: OK
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/BadRequest"
+        '422':
+          description: UNPROCESSABLE_ENTITY
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/UnprocessableEntity"
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/UnexpectedError"
   "/users":
     get:
       operationId: getUsers
